--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
 				<h1>Oops!</h1>
 				<h2>404 - The Page can't be found</h2>
 			</div>
-			<a href="https://ngcrgroup.com/">Go TO Homepage</a>
+			<a href="https://www.ngcrgroup.com/">Go TO Homepage</a>
 		</div>
 	</div>
 
