--- a/about.html
+++ b/about.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8">
         <title>About Us | Nexgen Car Rental</title>
         <meta name="description" content="A progressive and diversified business group with unique objectives, plans and global focus. We believe that, when there is professional collaboration and teamwork, wonderful things can be achieved.">
-        <meta property="og:url" content="https://ngcrgroup.com/about.html">
+        <meta property="og:url" content="https://www.ngcrgroup.com/about.html">
         <meta property="og:title" content="About Us | Nexgen Car Rental">
         <meta property="og:description" content="A progressive and diversified business group with unique objectives, plans and global focus. We believe that, when there is professional collaboration and teamwork, wonderful things can be achieved.">
-        <meta property="og:image" content="https://ngcrgroup.com/assets/images/1.jpg">
+        <meta property="og:image" content="https://www.ngcrgroup.com/assets/images/1.jpg">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="./assets/css/style.css">
