Added new og image

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <meta property="og:url" content="https://www.ngcrgroup.com/contact.html">
         <meta property="og:title" content="Contact Us | Nexgen Car Rental">
         <meta property="og:description" content="Want to be a part of this growing network? Contact us now.">
-        <meta property="og:image" content="https://www.ngcrgroup.com/assets/images/1.jpg">
+        <meta property="og:image" content="https://www.ngcrgroup.com/assets/images/og.png">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="./assets/css/style.css">
