--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta property="og:url" content="https://www.ngcrgroup.com/">
         <meta property="og:title" content="Nexgen Car Rental | Connecting all Car Rental Agencies">
         <meta property="og:description" content="Connecting all car rental agencies. Together we can do it.">
-        <meta property="og:image" content="https://www.ngcrgroup.com/assets/images/1.jpg">
+        <meta property="og:image" content="https://www.ngcrgroup.com/assets/images/og.png">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="./assets/css/style.css">
