--- a/about.html
+++ b/about.html
@@ -47,17 +47,17 @@
                 <h2 class="about-sub-title" data-aos="fade-up">NexGen Car Rental – Together we can....</h2><br>
                 <p class="about-text" data-aos="fade-up">A progressive and diversified business group with unique objectives, plans and global focus. We believe that, when there is professional collaboration and teamwork, wonderful things can be achieved.</p>
                 <div class="mt-5 row about-text" data-aos="fade-up">
-                    <div class="full-height-col col-lg-3 col-md-3 d-sm-flex d-xs-flex d-lg-none d-md-flex d-xl-none">Our Objective</div>
-                    <div class="full-height-col col-lg-3 col-md-3 d-none d-xs-none d-sm-none d-md-none d-lg-flex d-xl-flex">
+                    <div class="full-height-col col-lg-3 d-sm-flex d-xs-flex d-lg-none d-md-flex d-xl-none">Our Objective</div>
+                    <div class="full-height-col col-lg-3 col-xl-3 d-none d-xs-none d-sm-none d-md-none d-lg-flex d-xl-flex">
                         <img src="./assets/images/logo.png" class="boxed-logo">
                         <div>Our objective</div>
                     </div>
-                    <div class="pl-5 col-lg-9 col-md-9 mt-3">Bring individual and professional car rental businesses to this group to form mutually beneficial relationships that provide assistance and support to each other overtime. Every businessman knows to invest in money, but only those wise invest in relationship. You can become a magnet which attracts people and resources if you invest the time and energy to develop a strong network. Being visible and getting more attention is a benefit of being in a professional group, that is more vital in building and growing your business. So come on and unlock the hidden power of togetherness for success stories ahead.</div>
+                    <div class="pl-5 col-lg-9 col-xl-9 mt-3">Bring individual and professional car rental businesses to this group to form mutually beneficial relationships that provide assistance and support to each other overtime. Every businessman knows to invest in money, but only those wise invest in relationship. You can become a magnet which attracts people and resources if you invest the time and energy to develop a strong network. Being visible and getting more attention is a benefit of being in a professional group, that is more vital in building and growing your business. So come on and unlock the hidden power of togetherness for success stories ahead.</div>
                 </div>
                 <div class="mt-5 row about-text" data-aos="fade-up">
-                    <div class="full-height-col col-lg-3 col-md-3 d-sm-flex d-xs-flex d-md-flex d-lg-none d-xl-none">Our commitment</div>
-                    <div class="pl-5 col-lg-9 col-md-9 mt-3">Without our clients, we are just a bunch of people with futuristic ideas. You make us what we are.  So you deserve the best. We strive to provide exactly what our customers are looking for. We are committed to ensure that you remain the focal point for everything what we do. We are dedicated to helping our clients achieve and maintain high level of organizational performance. We will ensure that we provide the highest quality service possible. We act with integrity and maintain confidentiality. We regularly evaluate us and seek feedback from our clients.</div>
-                    <div class="full-height-col right-col col-lg-3 col-md-3 d-none d-xs-none d-sm-none d-md-none d-lg-flex d-xl-flex">
+                    <div class="full-height-col col-lg-3 d-sm-flex d-xs-flex d-md-flex d-lg-none d-xl-none">Our commitment</div>
+                    <div class="pl-5 col-lg-9 col-xl-9 mt-3">Without our clients, we are just a bunch of people with futuristic ideas. You make us what we are.  So you deserve the best. We strive to provide exactly what our customers are looking for. We are committed to ensure that you remain the focal point for everything what we do. We are dedicated to helping our clients achieve and maintain high level of organizational performance. We will ensure that we provide the highest quality service possible. We act with integrity and maintain confidentiality. We regularly evaluate us and seek feedback from our clients.</div>
+                    <div class="full-height-col right-col col-lg-3 col-xl-3 d-none d-xs-none d-sm-none d-md-none d-lg-flex d-xl-flex">
                         <img src="./assets/images/logo.png" class="boxed-logo">
                         <div>Our commitment</div>
                     </div>
