--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
         
                     </div>
                     <div class="container">
-                            <p class="lead contact-data"><a href="mailto:hello@ngcr.com"><ion-icon name="mail"></ion-icon>&ensp;hello@ngcr.com</a></p>
+                            <p class="lead contact-data"><a href="mailto:admin@ngcrgroup.com"><ion-icon name="mail"></ion-icon>&ensp;admin@ngcrgroup.com</a></p>
                     </div>
                     <div class="container">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5006.357857740201!2d-114.03423886847163!3d51.142051460489434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x537166a08b2ab635%3A0xd9670c9cf34a2ed2!2s57%20Freeport%20Cres%20NE%2C%20Calgary%2C%20AB%20T3J%203P9%2C%20Canada!5e0!3m2!1sen!2sin!4v1569174931473!5m2!1sen!2sin" width="100%" height="240" frameborder="0" style="border:0" allowfullscreen></iframe>
