--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="#">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Partners</a>
+                        <a class="nav-link" href="./partners.html">Partners</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact Us</a>
