--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="./about.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Partners</a>
+                        <a class="nav-link" href="./partners.html">Partners</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact Us</a>
