--- a/index1.html
+++ b/index1.html
@@ -604,5 +604,6 @@
           burger.dataset.state === 'closed' ? burger.dataset.state = "open" : burger.dataset.state = "closed";
           nav.dataset.state === "closed" ? nav.dataset.state = "open" : nav.dataset.state = "closed";
         });
+    </script>
   </body>
 </html>
