--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Oops!! The page could not be found</title>
+	<title>Oops!! We can't find the site you're looking for. Please contact the site administrator.</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700" rel="stylesheet">
 
@@ -20,9 +20,8 @@
 		<div class="notfound">
 			<div class="notfound-404">
 				<h1>Oops!</h1>
-				<h2>404 - The Page can't be found</h2>
+				<h2> We can't find the site you're looking for. Please contact the site administrator.</h2>
 			</div>
-			<a href="https://www.ngcrgroup.com/">Go TO Homepage</a>
 		</div>
 	</div>
 
