--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -23,6 +23,36 @@
 				<h2>404 - The Page can't be found</h2>
 			</div>
 			<a href="https://www.ngcrgroup.com/">Go TO Homepage</a>
+		</div>
+	</div>
+
+</body>
+
+</html>//-->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>Oops!! We can't find the site you're looking for. Please contact the site administrator.</title>
+
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700" rel="stylesheet">
+
+	<link type="text/css" rel="stylesheet" href="./assets/css/styles.min.css" />
+
+</head>
+
+<body>
+
+	<div id="notfound">
+		<div class="notfound">
+			<div class="notfound-404">
+				<h1>Oops!</h1>
+				<h2> We can't find the site you're looking for. Please contact the site administrator.</h2>
+			</div>
 		</div>
 	</div>
 
