Update and rename contactAA-BB.html to contact.html

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
             <div class="row mb-5 mt-5">
                 <div class="col-lg-5 col-md-5 justify-content-center contact-form">
                     <div class="success"><h3>Thank you for contacting us<br>We will get back to you soon.</h3></div>
-                    <form class="form" onsubmit="sendEnquiry(event,this)">
+                    <form class="form" onsubmit="javascript:void()">
                         <div class="container pt-3 pb-2">
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
